...
        button.setTitle(NSLocalizedString("signUpButton", comment: ""), for: .normal)
        button.setTitleColor(.black, for: .normal)
        button.backgroundColor = .systemPink
        button.layer.cornerRadius = 15.0
        button.widthAnchor.constraint(equalToConstant: widthButton).isActive = true
        button.addTarget(self, action: #selector(signUpDidTap), for: .touchUpInside)
        button.accessibilityIdentifier = "confirmSignUpButton"
        return button
    }()
    var actionSignUpButton: (() -> Void)?
    
    // MARK: - Init
    
...
        configureUI()
    }
    
    // MARK: - UI
    
    private func configureUI() {
        accessibilityIdentifier = "signUpView"
        backgroundColor = .white
        addSubview(mainStackView)
        addSubview(signUpButton)
        setupConstraints()
    }
    
...
